@@ -338,7 +338,7 @@ OBJECTS_TREE = {'functions': sorted(['pa_count_devices', 'pa_get_default_input',
                       'generators': sorted(['Noise', 'Phasor', 'Sine', 'Input', 'FM', 'SineLoop', 'Blit', 'PinkNoise', 'CrossFM',
                                             'BrownNoise', 'Rossler', 'Lorenz', 'LFO']),
                       'internal objects': sorted(['Dummy', 'InputFader', 'Mix', 'VarPort']),
-                      'midi': sorted(['Midictl', 'Notein']),
+                      'midi': sorted(['Midictl', 'Notein', 'MidiAdsr']),
                       'opensoundcontrol': sorted(['OscReceive', 'OscSend']),
                       'pan': sorted(['Pan', 'SPan', 'Switch', 'Selector', 'Mixer']),
                       'patterns': sorted(['Pattern', 'Score', 'CallAfter']),
